# Rss2Discord

./: .gitignore  Dockerfile  README.md  config.schema.json  config.yaml  docker-compose.yaml  main.py  pyproject.toml
Rss2Discord/: __init__.py  cml.py  discord.py  parse.py  timer.py  utils.py
Rss2Discord/Core/: __init__.py  memory.py
Rss2Discord/Discord/: __init__.py  embed.py
Rss2Discord/Models/: __init__.py  feeds.py  rss_content.py  webhooks.py
Rss2Discord/Utils/: __init__.py  logger.py  utils.py
Rss2Discord/models/: __init__.py  feeds.py  rss_content.py  webhooks.py
