[tool.poetry]
name = "rss2discord"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.31.0"
feedparser = "^6.0.10"
pyyaml = "^6.0.1"
msgpack = "^1.0.6"
pydantic = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
